--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> Lena, Lazy Cook</title>
+		<title> Lena, Lazy Chef</title>
 	</head>
 	<body>
 		<nav>
@@ -15,7 +15,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Lena!</h1>
-				<p>I'm best known as the lazy cook from <em>A Touch of Device</em> Trust me. <a href="/about">Read more about my work...</a></p>
+				<p>I'm best known as the lazy home chef from <em>A Touch of Device</em> Trust me. <a href="/about">Read more about my work...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
